deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgbouncer-shared
  labels:
    name: pgbouncer-shared
