deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-lb
  namespace: pgbouncer-shared
spec:
  type: LoadBalancer
  selector:
    app: pgbouncer
  ports:
  - name: pgbouncer
    port: 6432
    targetPort: 6432
