deployment/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgbouncer-allow-clients
  namespace: pgbouncer-shared
spec:
  podSelector:
    matchLabels:
      app: pgbouncer
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Only allow pods from namespaces with this specific label
    - namespaceSelector:
        matchLabels:
          pgbouncer-client: "true"
    ports:
    - protocol: TCP
      port: 6432
